--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@electron-forge/cli": "^7.11.1",
     "@electron-forge/maker-dmg": "^7.11.1",
     "electron": "^40.1.0",
+    "playwright": "^1.58.1",
     "typescript": "^5.5.3"
   },
   "private": true
